.oc-config/kafka/templates/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  ports:
    - port: 9092
      targetPort: 9092
  clusterIP: None  # Headless for StatefulSet
  selector:
    app: kafka
