.oc-config/kafka/templates/kafka-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: kafka-ui
